--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,7 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Adrien", "Bouissou", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-2106-0486"))
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
