--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,10 @@ Package: abmiscr
 Title: Adrien Bouissou's Miscellaneous Helper Functions
 Version: 0.0.0.9000
 Authors@R: 
-    person("Adrien", "Bouissou", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0003-2106-0486"))
+    person("Adrien", "Bouissou", email = "example@example.com",
+           role = c("aut", "cre"), comment = c(ORCID = "0000-0003-2106-0486"))
+Description: A suite of various helper functions for Adrien Bouissou's 
+    analytical workflow.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
