--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,11 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
+    dplyr,
     ggplot2,
     grid,
-    rlang
+    purrr,
+    rlang,
+    tibble
+Suggests: 
+    vegan
